# PIF_quadcopter_vision

obj_optimized_ver0.1/: CMakeCache.txt  CMakeLists.txt  Makefile  buffer.cpp  changeLog  cmake_install.cmake  main.cpp  sample
obj_optimized_ver0.1/modules/: Obj_img.h  flyCommand.h  myPID.cpp  myPID.h  point_2Dmaster.h
obj_ver6.0/: CMakeLists.txt  Untitled Document  main.cpp  swap.cpp
obj_ver6.0/modules/: Obj_ctrl.cpp  Obj_ctrl.h  Obj_img.cpp  point_2Dmaster.cpp  vector_2Dmaster.cpp  vector_2Dmaster.h  windownView.cpp  windownView.h
